--- a/mobile.css
+++ b/mobile.css
@@ -40,7 +40,7 @@
     }
 
     .container.locations {
-        background-image: none; /* I decided to remove the background image in this section for a better look */
+        background-image: url("locations.jpeg"); /* I decided to remove the background image in this section for a better look */
         padding-top: 1em;
         margin: 20px 0;
         height: 250px;
