--- a/mobile.css
+++ b/mobile.css
@@ -11,7 +11,7 @@
     nav ul {
         display: block;
         margin: 0;
-        padding-top: 10px;
+        padding: 0;
     }
 
     .container.slogan figure {
